fixed height issue with overflow and added webkit for scrollbar. color added

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: lavender;
+}
+
+body::-webkit-scrollbar{
+  display: none;
 }
 
 li {
@@ -11,8 +16,8 @@ li {
 .container1 {
   display: grid;
   grid-template-columns: 10vw 20vw 30vw;
-  grid-template-rows: 30vh 30vh 30vh;
-  grid-gap: 10vw;
+  grid-template-rows: 30vh 30vh 45vh;
+  grid-gap: 6vw;
   text-align: center;
   padding-left: 10vw;
 }
@@ -21,24 +26,41 @@ li {
   height: 35vh;
   width: 20vw;
   border-radius: 50%;
-  border: 3px solid black;
+  border: 2px solid black;
   margin-top: 5px;
-  /* margin-left: 5vw; */
 }
 
 .description {
   grid-column: 2 / span 3;
   grid-row: 1 / 1;
-  width: 60vw;
   padding: 0;
-  padding-left: 10vw;
+  margin-left: 10vw;
   padding-top: 5vh;
-  margin-top: 20px;
+  width: 60vw;
+  margin-top: 10px;
+  overflow: auto;
+  min-height: 0;
+  border: dashed 1px rgb(164, 164, 247);
+  border-radius: 5em;
+  box-shadow: 3px 4px rgb(164, 164, 247), -.6em 0 .9em rgb(191, 191, 248);
+}
+
+.description::-webkit-scrollbar{
+  display: none;
 }
 
 .info {
   overflow: auto;
   grid-column: 1 / 3;
+  border: 1px rgb(164, 164, 247) dashed;
+  border-radius: 5em;
+  padding: 10px;
+  margin-top: 1em;
+  box-shadow: 3px 4px rgb(164, 164, 247), -.6em 0 .9em rgb(191, 191, 248);
+}
+
+.info::-webkit-scrollbar{
+  display: none;
 }
 
 #more {
@@ -57,6 +79,15 @@ li {
 }
 
 .tech {
+  overflow: auto;
+  border: 1px dashed rgb(164, 164, 247);
+  border-radius: 3em;
+  padding: 10px;
+  box-shadow: 3px 4px rgb(164, 164, 247), -.6em 0 .9em rgb(191, 191, 248);
+}
+
+.tech::-webkit-scrollbar{
+  display: none;
 }
 
 .tech h4 {
@@ -67,7 +98,7 @@ li {
 
 #myBtn {
   border: none;
-  background-color: white;
+  background-color: lavender;
   color: blue;
   outline: none;
 }
@@ -104,7 +135,7 @@ li {
     grid-row: 2 / 2;
     padding: 0;
     margin-left: 13vw;
-    padding-top: 1em;
+    margin-bottom: 9em;
     overflow: auto;
   }
 
@@ -113,10 +144,16 @@ li {
     grid-column: 3 / 3;
   }
 
+  .info p,
+  #myBtn {
+    font-size: 0.7em;
+  }
+
   .tech {
     grid-row: 3 / 3;
     overflow: auto;
     grid-column: 1 / 3;
+    margin-bottom: 5em;
   }
 
   .tech h4 {
@@ -124,15 +161,17 @@ li {
   }
 
   .project {
+    grid-column: 1 / 4;
     grid-row: 4 / 4;
   }
 
   .contact {
-    grid-row: 4 / 4;
+    grid-column: 1 / 4;
+    grid-row: 5 / 5;
   }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 1.3em;
   }
 
   h2 {
@@ -143,7 +182,7 @@ li {
   }
 
   .btn {
-    font-size: 10px;
+    font-size: 15px;
     padding-left: 0;
     font-weight: 400;
   }
